<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="50dp"
    app:cardElevation="2dp"
    android:layout_marginBottom="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/statusImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:id="@+id/fromUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/statusImage"
            android:fontFamily="@font/product_sans"
            android:text="@string/fromuser"
            android:textColor="@color/my_theme"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/statusImage"
            android:layout_marginStart="15dp" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/fromUser"
            android:src="@drawable/ic_baseline_arrow_right_alt_24"
            android:layout_toEndOf="@id/fromUser" />

        <TextView
            android:id="@+id/toUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/arrow"
            android:fontFamily="@font/product_sans"
            android:text="@string/touser"
            android:textColor="@color/my_theme"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toEndOf="@id/arrow" />

        <TextView
            android:id="@+id/dateOfTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateOfTransaction"
            android:textSize="16sp"
            android:layout_below="@id/fromUser"
            android:fontFamily="@font/product_sans"
            android:layout_toRightOf="@id/statusImage"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/statusImage"
            android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/transactAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactAmount"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/my_theme"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/product_sans"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp" />

        <TextView
            android:id="@+id/transactionID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateOfTransaction"
            android:text="@string/tID"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/product_sans"
            android:layout_toRightOf="@id/statusImage"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/statusImage"
            android:layout_marginStart="15dp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>