<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AppInfo"
    android:background="@color/my_theme">

    <TextView
        android:id="@+id/appInfoHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/about_this_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        android:fontFamily="@font/product_sans"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/appDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans"
        android:padding="20dp"
        android:text="@string/appdetails"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sparksLogo"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans"
        android:padding="10dp"
        android:text="@string/github"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDetails"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/thankyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/product_sans"
        android:text="Thank You"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkedIn"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/linkedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/product_sans"
        android:padding="10dp"
        android:text="@string/linkedInhandle"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/sparksLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appInfoHeading"
        app:srcCompat="@drawable/sparkslogo" />


</androidx.constraintlayout.widget.ConstraintLayout>